--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Mistery Letter</title>
 </head>
 <body>
+    <form>
+        <input id="carta-texto">
+    </form>
+    <button id="criar-carta">Gerar carta!</button>
+    <p id="carta-gerada"></p>
     <script src="./script.js"></script>
 </body>
 </html>
