--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
         <input id="carta-texto">
     </form>
     <button id="criar-carta">Gerar carta!</button>
+    <button id="limpa-carta">Limpar carta</button>
     <p id="carta-gerada"></p>
+    <p id="carta-contador"></p>
     <script src="./script.js"></script>
 </body>
 </html>
