--- a/index.html
+++ b/index.html
@@ -8,10 +8,15 @@
        <nav></nav>
     </header>
     <article>
-      <section class="container">
+      <div class="container">
         <div class="main">
+          <form>
+            <label for="carta-texto"></label>
+            <input type="text" id="carta-texto"></input>
+            <button id="button1">Gerar Carta</button>
+          </form>
         </div>
-      </section>
+      </div>
     </article>
     <footer class="footer">Site desenvolvido por Marco Barbosa</footer>
     <script src="./script.js"></script>
