--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
             <button id="button1">Gerar Carta</button>
           </form>
         </div>
+        <div id="carta-gerada">
+          <p>ONONON</p>
+        </div>
       </div>
     </article>
     <footer class="footer">Site desenvolvido por Marco Barbosa</footer>
