--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
           <form>
             <label for="carta-texto"></label>
             <input type="text" id="carta-texto"></input>
-            <button id="button1">Gerar Carta</button>
+            <button id="criar-carta">Gerar Carta</button>
           </form>
         </div>
-        <div id="carta-gerada">
-          <p>ONONON</p>
+        <div>
+          <p id="carta-gerada">ONONON</p>
         </div>
       </div>
     </article>
