--- a/index.html
+++ b/index.html
@@ -10,14 +10,12 @@
     <article>
       <div class="container">
         <div class="main">
-          <form>
-            <label for="carta-texto"></label>
-            <input type="text" id="carta-texto"></input>
-            <button id="criar-carta">Gerar Carta</button>
-          </form>
+          <label for="carta-texto"></label>
+          <input type="text" id="carta-texto"></input>
+          <button id="criar-carta">Gerar Carta</button>
         </div>
         <div>
-          <p id="carta-gerada">ONONON</p>
+          <p id="carta-gerada"></p>
         </div>
       </div>
     </article>
