--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <label for="carta-texto">
+  <label for="carta-texto"> Coloque seu Texto aqui em baixo e veja cada palavra em uma fonte!!
     <input type="text" id="carta-texto"><button type="submit" id="criar-carta">Criar Cartas</button>
   </label>
 
