--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Misterious Letter</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <script defer src="script.js"></script>
 </head>
 <body>
     <h1>Misterious Letter</h1>
-    <form>
-        <input id="carta-texto">
-        <button id="criar-carta"></button>
-    </form>
+    <section>
+        <input id="carta-texto" type="text" size="60" placeholder="Type here the message of your letter">
+        <button id="criar-carta">Create Letter</button>
+    </section>
     <p id="carta-gerada"></p>
 </body>
 </html>
