problema da lista de classe - resolvido,usado p#armazem

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
   <label for="carta-texto"> Coloque seu Texto aqui em baixo e veja cada palavra em uma fonte!!
     <input type="text" id="carta-texto"><button type="submit" id="criar-carta">Criar Cartas</button>
   </label>
-
+  <p id="contador"></p>
   <p id="carta-gerada"></p>
+  <p id='armazem'></p>
   <script src="script.js"></script>
 </body>
 </html>
