Momento de verificação

--- a/index.html
+++ b/index.html
@@ -11,8 +11,14 @@
     <input type="text" id="carta-texto"><button type="submit" id="criar-carta">Criar Cartas</button>
   </label>
   <p id="contador"></p>
+
   <p id="carta-gerada"></p>
-  <p id='armazem'></p>
+
+  <p id='armazem-estilo' class="newspaper magazine1 magazine2"></p>
+  <p id="armazem-tamanho" class="medium big reallybig"></p>
+  <p id="armazem-rotacao" class="rotateleft rotateright"></p>
+  <p id="armazem-inclinacao" class="skewleft skewright"></p>
+
   <script src="script.js"></script>
 </body>
 </html>
