--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script src="script.js"></script>
+    <script defer src="script.js"></script>
     <link rel="stylesheet" href="style.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -13,7 +13,9 @@
         <input id="carta-texto" type="text" />
         <button id="criar-carta">Create letter</button>
       </section>
-      <p id="carta-gerada"></p>
+      <p id="carta-gerada">Testando pra ver como funciona</p>
+      <br />
+      <br />
     </article>
   </body>
 </html>
