--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
         <input id="carta-texto" type="text" />
         <button id="criar-carta">Create letter</button>
       </section>
-      <p id="carta-gerada">Testando pra ver como funciona</p>
-      <br />
-      <br />
+      <p id="carta-gerada"></p>
     </article>
   </body>
 </html>
