1-bonuso feito, 2-bonus corrigido, teste3-obrigatorio

--- a/index.html
+++ b/index.html
@@ -8,16 +8,18 @@
 </head>
 <body>
   <label for="carta-texto"> Coloque seu Texto aqui em baixo e veja cada palavra em uma fonte!!
-    <input type="text" id="carta-texto"><button type="submit" id="criar-carta">Criar Cartas</button>
+    <input type="text" id="carta-texto"><button type="submit" id="criar-carta">Faça Suas Cartas</button>
   </label>
-  <p id="contador"></p>
+  <p id="carta-contador"></p>
 
   <p id="carta-gerada"></p>
 
-  <p id='armazem-estilo' class="newspaper magazine1 magazine2"></p>
-  <p id="armazem-tamanho" class="medium big reallybig"></p>
-  <p id="armazem-rotacao" class="rotateleft rotateright"></p>
-  <p id="armazem-inclinacao" class="skewleft skewright"></p>
+  <section>
+    <p id='armazem-estilo' class="newspaper magazine1 magazine2"></p>
+    <p id="armazem-tamanho" class="medium big reallybig"></p>
+    <p id="armazem-rotacao" class="rotateleft rotateright"></p>
+    <p id="armazem-inclinacao" class="skewleft skewright"></p>
+  </section>
 
   <script src="script.js"></script>
 </body>
