--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
   <label for="carta-texto"> Coloque seu Texto aqui em baixo e veja cada palavra em uma fonte!!
-    <input type="text" id="carta-texto"><button type="submit" id="criar-carta">Faça Suas Cartas</button>
+    <input type="text" name="carta-texto" id="carta-texto">
+    <button id="criar-carta">Faça Suas Cartas</button>
   </label>
   <p id="carta-contador"></p>
 
