--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <input type="text" id="carta-texto">
-    <button type="button" class="criar-carta">Criar carta</button>
+    <button type="button" id="criar-carta">Criar carta</button>
     <p id="carta-gerada"></p>
 
 
