--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
-<html>
-  <head><title></title>
-  <link href="./style.css" rel="stylesheet">
+<html lang="pt-br">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title></title>
+    <link href="./style.css" rel="stylesheet">
   </head>
   <body>
     <header>
