--- a/index.html
+++ b/index.html
@@ -9,13 +9,9 @@
 <body>
     <input type="text" id="carta-texto">
     <button type="button" id="criar-carta">Criar carta</button>
-    <p id="carta-gerada"></p>
+    <div id="carta-div">
 
-
-
-
-
-
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
