--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <input type="text" id="carta-texto">
     <button type="button" id="criar-carta">Criar carta</button>
     <div id="carta-div">
-
+        <p id="carta-gerada"></p>
     </div>
     <script src="script.js"></script>
 </body>
