--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
         <button id="criar-carta">Create Letter</button>
     </section>
     <p id="carta-gerada"></p>
+    <p id="carta-contador"></p>
 </body>
 </html>
