Adicionando contador de palavras

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <input type="text" id="carta-texto">
     <button type="button" id="criar-carta">Criar carta</button>
+    <p id="carta-contador"></p>
     <div id="carta-div">
         <p id="carta-gerada"></p>
     </div>
