--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
     <link href="style.css" rel="stylesheet" />
 </head>
 <body>
-    <input type="text" id="carta-texto">
-    <button type="button" id="criar-carta">Criar carta</button>
-    <p id="carta-contador"></p>
-    <div id="carta-div">
-        <p id="carta-gerada"></p>
+    <div>
+        <input type="text" id="carta-texto">
+        <button type="button" id="criar-carta">Criar carta</button>
+        <p id="carta-contador"></p>
+        <div id="carta-div">
+            <p id="carta-gerada"></p>
+        </div>
+        <script src="script.js"></script>
     </div>
-    <script src="script.js"></script>
 </body>
 </html>
