Adicionado o botao e o paragrafo para iniciar as funcionalidades

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <body>
     <section class="main">
         <input type="text" id="carta-texto" class="digitaTexto" placeholder="Digite o seu texto aqui">
+        <button id="criar-carta" class="botao">Criar Carta</button>
+        <p id="carta-gerada"></p>
     </section>
 </body>
 </html>
