Criado a classes no css

--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
     <title>Mistery Letter</title>
 </head>
 <body>
-    <section class="main">
-        <input type="text" id="carta-texto" class="digitaTexto" placeholder="Digite o seu texto aqui">
-        <button id="criar-carta" class="botao">Criar Carta</button>
-        <p id="carta-gerada"></p>
-    </section>
+    <div>
+        <section class="content">
+            <input type="text" id="carta-texto" class="digitaTexto" placeholder="Digite o seu texto aqui">
+            <button id="criar-carta" class="botao">Criar Carta</button>
+        </section>
+        <section class="content">
+            <p id="carta-gerada" class="paragrafo"></p>
+        </section>
+    </div>
 </body>
 </html>
