--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         </div>
         <div>
           <p id="carta-gerada"></p>
+          <p id="carta-contador"></p>
         </div>
       </div>
     </article>
