--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <input type="text" id="carta-texto"></input>
           <button id="criar-carta">Gerar Carta</button>
         </div>
-        <div>
+        <div class="conteudo">
           <p id="carta-gerada"></p>
           <p id="carta-contador"></p>
         </div>
