--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
         </div>
         <div class="conteudo">
           <p id="carta-gerada"></p>
-          <p id="carta-contador"></p>
+          <div>
+            <p id="carta-contador"></p>
+          </div>
         </div>
       </div>
     </article>
