Salvando a estrutura inicial do projeto

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
     <label for="carta-texto">Texto</label>
     <input type="text" id="carta-texto">
-    <p id="carta-gerada"> </p>
-    <button id="criar-carta"> Criar Carta </button>
+    <p id="carta-gerada">
+    <div class="newspaper"></div>    
     </p>
-      
+    <button id="criar-carta"> Criar Carta </button>     
 </body>
 </html>
