--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <title>Carta Misteriosa</title>
 </head>
 <body>
-    <label for="carta-texto">Texto</label>
-    <input type="text" id="carta-texto">
+    <label for="carta-texto" >Texto</label>
+    <input type="text" id="carta-texto" size="100">
+  
+    <button id="criar-carta"> Criar Carta </button>
+    <script src="script.js"></script>    
     <p id="carta-gerada">
-    <div class="newspaper"></div>    
-    </p>
-    <button id="criar-carta"> Criar Carta </button>     
+    </p> 
 </body>
 </html>
