--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         </section>
         <section class="content">
             <p id="carta-gerada" class="paragrafo"></p>
+            <p id="carta-contador" class="paragrafo"></p>
         </section>
     </div>
 </body>
