all classes added

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Mistery Letter</title>
   </head>
   <body>
-    <label for="carta-texto">Insira seu </label>
-    <input type="text" name="textCard" id="carta-texto" />
+    <label for="carta-texto"></label>
+    <input type="text" name="textCard" id="carta-texto" class="inputBar" />
+    <button type="submit" id="criar-carta">Criar</button>
   </body>
 </html>
