--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
 <input type="text" id="carta-texto">
-<button id="criar-carta">Gerar carta</button>
+<button id="criar-carta" data-ref="#carta-texto" onclick="writeLetter(this)">Gerar carta</button>
 
 <p id="carta-gerada">
 
