--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <button id="criar-carta"> Criar Carta </button>
     <script src="script.js"></script>    
     <p id="carta-gerada">
-    </p> 
+    </p>
+    <p id="carta-contador"></p> 
 </body>
 </html>
