--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
 <input type="text" id="carta-texto">
 <button id="criar-carta" data-ref="#carta-texto" onclick="writeLetter(this)">Gerar carta</button>
 
-<p id="carta-gerada">
+<p id="carta-gerada"></p>
 
-
-</p>
+<p id="carta-contador"></p>
 
 </body>
 <script src="script.js"></script>
