--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
           <button id="criar-carta">Gerar Carta</button>
         </div>
         <div class="conteudo">
-          <p id="carta-gerada"></p>
+          <p id="carta-gerada">
+            <span></span>
+          </p>
         </div>
         <div>
           <p id="carta-contador"></p>
