--- a/index.html
+++ b/index.html
@@ -12,5 +12,8 @@
   <h1>Bem Vindo</h1>
 
   <input id="carta-texto" type="text">
+  <button id="criar-carta">Criar</button>
+
+  <p id="carta-gerada"></p>
 </body>
 </html>
