--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
 
   <script src="script.js" defer></script>
 </head>
+
 <body>
   <h1>Bem Vindo</h1>
 
   <input id="carta-texto" type="text">
   <button id="criar-carta">Criar</button>
 
-  <p id="carta-gerada"></p>
+  <p id="carta-gerada">
+    <span></span>
+  </p>
 </body>
 </html>
