--- a/index.html
+++ b/index.html
@@ -15,8 +15,6 @@
   <input id="carta-texto" type="text">
   <button id="criar-carta">Criar</button>
 
-  <p id="carta-gerada">
-    <span></span>
-  </p>
+  <p id="carta-gerada"></p>
 </body>
 </html>
