try again lol 10.42

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <h1>Bem Vindo</h1>
 
   <input id="carta-texto" type="text">
-  <button id="criar-carta">Criar</button>
+  <button id="criar-carta">Gerar</button>
 
   <p id="carta-gerada"></p>
 </body>
