--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <h1>Bem Vindo</h1>
+  <h1>Carta Misteriosa</h1>
 
   <input id="carta-texto" type="text">
   <button id="criar-carta">Gerar</button>
