--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <button id="criar-carta">Create letter</button>
       </section>
       <p id="carta-gerada"></p>
+      <p id="carta-contador"></p>
     </article>
   </body>
 </html>
