--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
             <input id="carta-texto" placeholder="Digite uma frase">
         </form>
         <div class="button">
-            <button id="criar-carta">Gerar carta!</button>
-            <button id="limpa-carta">Limpar carta</button>
+            <button class="button1" id="criar-carta">Gerar carta!</button>
+            <button class="button2" id="limpa-carta">Limpar carta</button>
         </div>
         <div class="paragraph">
-            <p id="carta-gerada"></p>
+            <p class="p1" id="carta-gerada"></p>
             <p id="carta-contador"></p>
         </div>
     </div>
